# aau-spritegen

./: README.md  build.py  pyproject.toml
src/aau_spritegen/: main.py  model.py  services.py
