[project]
name = "aau-spritegen"
version = "0.1.0"
description = "CLI for building MapLibre sprite files"
authors = [
    {name = "Kasper Fromm Pedersen", email = "kasperf@cs.aau.dk"},
]
dependencies = [
    "typer==0.12.*",
    "pillow==10.4.*",
    "wand==0.6.*",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
spritegen = "aau_spritegen.main:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
