[project]
name = "aau-spritegen"
version = "0.1.0"
description = "CLI for building MapLibre sprite files"
authors = [
    {name = "Kasper Fromm Pedersen", email = "kasperf@cs.aau.dk"},
]
dependencies = [
    "typer==0.12.*",
    "wand==0.6.*",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pyinstaller==6.10.*",
    "distro==1.9.*",
]

[project.scripts]
spritegen = "aau_spritegen.main:app"

[build-system]
requires = ["pdm-backend", "pyinstaller==6.10.*", "distro==1.9.*"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
post_build = "build.py"

[tool.pdm]
distribution = true
